--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 minecraft_version=1.16.3
 
 archives_base_name=architectury
-mod_version=1.0.
-last_minor_build=1
+mod_version=1.0
+last_minor_build=2
 maven_group=me.shedaniel
 
 fabric_loader_version=0.10.5+build.213
