Set gradle memory to 3GB

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,11 @@
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
 minecraft_version=1.16.3
 
 archives_base_name=architectury
 mod_version=1.0
-last_minor_build=2
+last_minor_build=3
 maven_group=me.shedaniel
 
 fabric_loader_version=0.10.5+build.213
