More events and hooks

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id "com.github.johnrengelman.shadow" version "5.0.0"
 }
 
+loom {
+    accessWidener(file("src/main/resources/architectury.accessWidener"))
+}
+
 configurations {
     shadow
 }
