--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -20,10 +20,13 @@ dependencies {
     implementation "net.jodah:typetools:0.6.2"
     shadow "net.jodah:typetools:0.6.2"
 
-    compile(project(":common")) {
+    compileOnly(project(path: ":common", configuration: "transformed")) {
         transitive = false
     }
-    shadow(project(":common")) {
+    runtimeOnly(project(path: ":common", configuration: "transformed")) {
+        transitive = false
+    }
+    shadow(project(path: ":common", configuration: "transformed")) {
         transitive = false
     }
 }
