--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -91,4 +91,4 @@ curseforge {
     }
 }
 
-rootProject.tasks.getByName("curseforgePublish").dependsOn curseforge
+rootProject.tasks.getByName("curseforgePublish").dependsOn tasks.getByName("curseforge")
