--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,6 @@ pluginManagement {
 
 include("common")
 include("fabric")
-include("forge")
+//include("forge")
 
 rootProject.name = "architectury"
