--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,17 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.16.4
-supported_version=1.16.4
+minecraft_version=20w51a
+supported_version=20w51a
+
+cf_type=beta
 
 archives_base_name=architectury
-mod_version=1.3
+mod_version=2.0
 maven_group=me.shedaniel
 
 fabric_loader_version=0.10.8
-fabric_api_version=0.29.3+1.16
-mod_menu_version=1.14.6+
+fabric_api_version=0.29.3+1.17
+mod_menu_version=2.0.0-beta.1+build.2
 
-forge_version=35.1.36
+#forge_version=35.1.36
