--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -16,3 +16,19 @@ public net.minecraft.block.AbstractBlock$Properties field_235813_o_ #isAir
 public net.minecraft.block.AbstractBlock$Properties field_235806_h_ #requiresCorrectToolForDrops
 public-f net.minecraft.world.Explosion field_77280_f #radius
 public net.minecraft.client.gui.screen.Screen field_230710_m_ #buttons
+public-f net.minecraft.world.biome.Biome$Climate field_242460_b # precipitation
+public-f net.minecraft.world.biome.Biome$Climate field_242461_c # temperature
+public-f net.minecraft.world.biome.Biome$Climate field_242462_d # temperatureModifier
+public-f net.minecraft.world.biome.Biome$Climate field_242463_e # downfall
+public-f net.minecraft.world.biome.BiomeAmbience field_235205_b_ # fogColor
+public-f net.minecraft.world.biome.BiomeAmbience field_235206_c_ # waterColor
+public-f net.minecraft.world.biome.BiomeAmbience field_235207_d_ # waterFogColor
+public-f net.minecraft.world.biome.BiomeAmbience field_235208_e_ # particle
+public-f net.minecraft.world.biome.BiomeAmbience field_235209_f_ # ambientSound
+public-f net.minecraft.world.biome.BiomeAmbience field_235210_g_ # moodSound
+public-f net.minecraft.world.biome.BiomeAmbience field_235211_h_ # additionsSound
+public-f net.minecraft.world.biome.BiomeAmbience field_235212_i_ # music
+public-f net.minecraft.world.biome.BiomeAmbience field_242523_e # skyColor
+public-f net.minecraft.world.biome.BiomeAmbience field_242524_f # foliageColor
+public-f net.minecraft.world.biome.BiomeAmbience field_242525_g # grassColor
+public-f net.minecraft.world.biome.BiomeAmbience field_242526_h # grassColorModifier
