--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ allprojects {
             year = 2020
         }
 
-        include "*.java"
+        include "**/*.java"
         exclude "**/NbtType.java"
 
         ignoreFailures = true
