--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id "architect-plugin" version "1.2.33"
+    id "architectury-plugin" version "1.3.41"
+    id "forgified-fabric-loom" version "0.5.22" apply false
     id "org.cadixdev.licenser" version "0.5.0"
     id "com.jfrog.bintray" version "1.8.4"
     id "com.matthewprenger.cursegradle" version "1.4.0" apply false
@@ -13,11 +14,15 @@ architectury {
 
 subprojects {
     apply plugin: "forgified-fabric-loom"
+
+    dependencies {
+        testCompile sourceSets.main.output
+    }
 }
 
 allprojects {
     apply plugin: "java"
-    apply plugin: "architect-plugin"
+    apply plugin: "architectury-plugin"
     apply plugin: "org.cadixdev.licenser"
 
     archivesBaseName = rootProject.archives_base_name
