--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ archives_base_name=architectury
 mod_version=1.2
 maven_group=me.shedaniel
 
-fabric_loader_version=0.10.6+build.214
-fabric_api_version=0.25.1+build.416-1.16
+fabric_loader_version=0.10.8
+fabric_api_version=0.29.3+1.16
 mod_menu_version=1.14.6+
 
-forge_version=35.1.6
+forge_version=35.1.36
