--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id "architectury-plugin" version "1.3.47"
-    id "forgified-fabric-loom" version "0.5.30" apply false
+    id "architectury-plugin" version "2.0.57"
+    id "forgified-fabric-loom" version "0.6.47" apply false
     id "org.cadixdev.licenser" version "0.5.0"
     id "com.jfrog.bintray" version "1.8.4"
     id "com.matthewprenger.cursegradle" version "1.4.0" apply false
@@ -15,8 +15,9 @@ architectury {
 subprojects {
     apply plugin: "forgified-fabric-loom"
 
-    dependencies {
-        testCompile sourceSets.main.output
+    loom {
+        silentMojangMappingsLicense()
+        useFabricMixin = true
     }
 }
 
@@ -31,6 +32,14 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
+
+        // The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
+        // JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
+        // We'll use that if it's available, but otherwise we'll use the older option.
+        def targetVersion = 8
+        if (JavaVersion.current().isJava9Compatible()) {
+            options.release = targetVersion
+        }
     }
 
     license {
