--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -32,3 +32,4 @@ public-f net.minecraft.world.biome.BiomeAmbience field_242523_e # skyColor
 public-f net.minecraft.world.biome.BiomeAmbience field_242524_f # foliageColor
 public-f net.minecraft.world.biome.BiomeAmbience field_242525_g # grassColor
 public-f net.minecraft.world.biome.BiomeAmbience field_242526_h # grassColorModifier
+public net.minecraft.world.storage.FolderName <init>(Ljava/lang/String;)V
