--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -80,6 +80,7 @@ curseforge {
             changelogType = "html"
             changelog = releaseChangelog()
             addGameVersion "1.16.4"
+            addGameVersion "1.16.5"
             addGameVersion "Java 8"
             addGameVersion "Forge"
             mainArtifact(remapJar.archivePath) {
