Add PR snapshots

--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,21 @@ allprojects {
     apply plugin: "java"
     apply plugin: "architectury-plugin"
     apply plugin: "org.cadixdev.licenser"
+    
+    ext {
+        isSnapshot = System.getenv("PR_NUM") != null
+    }
+    
+    def runNumber = (System.getenv("GITHUB_RUN_NUMBER") == null ? (((short) new Random().nextInt()).abs() + 1000).toString() : System.getenv("GITHUB_RUN_NUMBER"))
 
-    archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version + "." + (System.getenv("GITHUB_RUN_NUMBER") == null ? "9999" : System.getenv("GITHUB_RUN_NUMBER"))
+    if (!ext.isSnapshot) {
+        version = rootProject.base_version + "." + runNumber
+        archivesBaseName = rootProject.archives_base_name
+    } else {
+        version = rootProject.base_version + "-PR." + System.getenv("PR_NUM") + "." + runNumber
+        archivesBaseName = rootProject.archives_base_name_snapshot
+    }
+    
     group = rootProject.maven_group
 
     tasks.withType(JavaCompile) {
@@ -55,7 +67,7 @@ allprojects {
 
         ignoreFailures = true
     }
-    
+
     ext {
         releaseChangelog = {
             def dateFormat = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm")
