--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,8 @@ minecraft_version=1.16.4
 supported_version=1.16.4/5
 
 archives_base_name=architectury
-mod_version=1.4
+archives_base_name_snapshot=architectury-snapshot
+base_version=1.4
 maven_group=me.shedaniel
 
 fabric_loader_version=0.10.8
