--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,7 +1,12 @@
 name: Snapshot Compile & Release
 
 on:
-  [pull_request]
+  pull_request:
+    paths:
+      - '**.gradle'
+      - '**.properties'
+      - '**/src/**'
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   build:
@@ -16,6 +21,8 @@ jobs:
           java-version: 1.8
       - name: Upload to Bintray
         run: ./gradlew bintrayUpload --stacktrace
+        if: |
+          !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.pull_request.title, '[ci skip]')
         env:
           BINTRAY_USER: shedaniel
           BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
