--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     mappings minecraft.officialMojangMappings()
     // We depend on fabric loader here to use the fabric @Environment annotations
     // Do NOT use other classes from fabric loader
-    modCompile "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     implementation "net.jodah:typetools:0.6.2"
 }
 
