--- a/common/build.gradle
+++ b/common/build.gradle
@@ -42,4 +42,16 @@ publishing {
             artifact javadocsJar
         }
     }
+
+    repositories {
+        if (System.getenv("MAVEN_PASS") != null) {
+            maven {
+                url = "https://deploy.shedaniel.me/"
+                credentials {
+                    username = "shedaniel"
+                    password = System.getenv("MAVEN_PASS")
+                }
+            }
+        }
+    }
 }
