--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -74,6 +74,18 @@ publishing {
             }
         }
     }
+
+    repositories {
+        if (System.getenv("MAVEN_PASS") != null) {
+            maven {
+                url = "https://deploy.shedaniel.me/"
+                credentials {
+                    username = "shedaniel"
+                    password = System.getenv("MAVEN_PASS")
+                }
+            }
+        }
+    }
 }
 
 curseforge {
