--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=20w51a
-supported_version=20w51a
+minecraft_version=21w06a
+supported_version=21w06a
 
 cf_type=beta
 
@@ -11,8 +11,8 @@ archives_base_name_snapshot=architectury-snapshot
 base_version=2.0
 maven_group=me.shedaniel
 
-fabric_loader_version=0.10.8
-fabric_api_version=0.29.3+1.17
-mod_menu_version=2.0.0-beta.1+build.2
+fabric_loader_version=0.11.1
+fabric_api_version=0.30.2+1.17
+mod_menu_version=2.0.0-beta.2
 
 #forge_version=35.1.36
