--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -64,7 +64,7 @@ remapJar {
 publishing {
     publications {
         mavenForge(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-fabric"
+            artifactId = rootProject.archives_base_name + "-forge"
             artifact(remapJar.archivePath) {
                 builtBy build
                 classifier null
