--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,6 +23,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 publishing {
     publications {
         mavenCommon(MavenPublication) {
+            artifactId = rootProject.archivesBaseName
             artifact(file("${project.buildDir}/libs/${project.archivesBaseName}-${project.version}.jar")) {
                 builtBy build
             }
