--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -63,7 +63,7 @@ remapJar {
 publishing {
     publications {
         mavenFabric(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-fabric"
+            artifactId = rootProject.archivesBaseName + "-fabric"
             artifact(remapJar.archivePath) {
                 builtBy build
                 classifier null
