--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "architectury-plugin" version "3.0.85"
+    id "architectury-plugin" version "3.0.88"
     id "forgified-fabric-loom" version "0.6.70" apply false
     id "org.cadixdev.licenser" version "0.5.0"
     id "com.matthewprenger.cursegradle" version "1.4.0" apply false
@@ -26,6 +26,14 @@ allprojects {
     
     ext {
         isSnapshot = System.getenv("PR_NUM") != null
+    }
+    
+    architectury {
+        transformerVersion = "2.0.9999"
+    }
+    
+    repositories {
+        mavenLocal()
     }
     
     def runNumber = (System.getenv("GITHUB_RUN_NUMBER") == null ? "9999" : System.getenv("GITHUB_RUN_NUMBER"))
