--- a/testmod-common/build.gradle
+++ b/testmod-common/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     mappings loom.officialMojangMappings()
     // We depend on fabric loader here to use the fabric @Environment annotations
     // Do NOT use other classes from fabric loader
-    modCompile "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     implementation project(":common")
 }
 
