--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -11,8 +11,8 @@ architectury {
 dependencies {
     minecraft "com.mojang:minecraft:${rootProject.architectury.minecraft}"
     mappings loom.officialMojangMappings()
-    modCompile "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-    modCompile "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
+    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     modCompileOnly "io.github.prospector:modmenu:${rootProject.mod_menu_version}"
 
     implementation project(path: ":fabric", configuration: "dev")
